<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup"
    android:background="@color/TextColorNavyBlue">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/mainIV"
        android:src="@drawable/logo1"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mainTV"
        android:text="eFlight Reserve"
        android:layout_below="@+id/mainIV"
        android:textColor="@color/text"
        android:background="@color/textBG"
        android:gravity="center"
        android:textSize="25sp"
        android:padding="5dp"
        android:textStyle="bold|italic"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nameET"
        android:background="@color/TextColorWhite"
        android:layout_below="@id/mainTV"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:hint="@string/enter_your_name"
        android:padding="10dp"
        android:inputType="text"
        android:textSize="20sp"
        android:textColor="@color/TextColorBlack"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userET"
        android:background="@color/TextColorWhite"
        android:layout_below="@id/nameET"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:hint="@string/enter_user_name"
        android:padding="10dp"
        android:inputType="text"
        android:textSize="20sp"
        android:textColor="@color/TextColorBlack"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passET"
        android:background="@color/TextColorWhite"
        android:layout_below="@id/userET"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:hint="@string/enter_password"
        android:padding="10dp"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:textColor="@color/TextColorBlack"
        />
    <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/confpassET"
        android:background="@color/TextColorWhite"
    android:layout_below="@id/passET"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:hint="@string/confirm_password"
    android:padding="10dp"
    android:inputType="textPassword"
    android:textSize="20sp"
    android:textColor="@color/TextColorBlack"
    />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/singupBTN"
        android:layout_below="@id/confpassET"
        android:layout_centerInParent="true"
        android:text="@string/sign_up"
        android:textStyle="bold|italic"
        android:textColor="@color/text2"
        android:background="@drawable/button_bg"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginTV"
        android:layout_below="@+id/singupBTN"
        android:text="@string/have_account"
        android:textColor="@color/TextColorYellow"
        android:background="@color/TextColorNavyBlue"
        android:textSize="15sp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:padding="5dp"
        android:textStyle="italic"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginBTN"
        android:layout_below="@id/loginTV"
        android:text="@string/login"
        android:background="@color/TextColorPurple"
        android:textColor="@color/TextColorYellow"
        android:layout_alignParentRight="true"
        android:layout_marginRight="25dp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        />

</RelativeLayout>